--- a/.travis.yml
+++ b/.travis.yml
@@ -10,22 +10,21 @@ matrix:
       language: shell       # 'language: python' is an error on Travis CI macOS
       # python: 3.7         # 'python:' is ignored on Travis CI macOS
     - name: "Python 3.7.3 on Windows"
-      os: windows
+      os: windows           # Windows 10.0.17134 N/A Build 17134
       language: shell       # 'language: python' is an error on Travis CI Windows
       # python: 3.7         # 'python:' is ignored on Travis CI Windows
       before_install:
-        - systeminfo
         - choco install python  # this install takes about 1 min 30 sec
       env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
 
 install:
-  - python --version || true
-  - python3 --version || true
-  - python3.7 --version || true
-  - pip --version || true
-  - pip3 --version || true
-  - pip install --upgrade pip || true
-  - pip3 install --upgrade pip || true
-script: python3 platform-info.py
+  - py --version || true
+  - py3 --version || true
+  - py37 --version || true
+  - py3.7 --version || true
+  - pip3 install --upgrade pip
+# 'python' is Python 2.7 on Linux and macOS
+# 'python3' is an error on Windows
+script: python3 platform-info.py || python platform-info.py
 notifications:
   email: false
