--- a/conda_on_Windows.yml
+++ b/conda_on_Windows.yml
@@ -1,31 +1,27 @@
 language: generic
 
+windows-steps: &windows-steps
+  before_install:
+    - choco install miniconda3 openssl.light  # pip needs OpenSSL
+    - conda create -n test-environment python=$PYTHON --yes
+    - . activate test-environment
+    - conda --version ; python --version ; pip --version
+    - python -m pip install --upgrade pip
+
 matrix:
-  allow_failures:
-    - os: windows
   include:
     - os: windows
       language: shell  # 'language: python' is an error on Travis CI Windows
       env:
-        - PYTHON=2.7 PYTHONWARNINGS=ignore
+        - PYTHON=2.7
         - PATH="/c/tools/miniconda3/:/c/tools/miniconda3/Scripts:$PATH"
-      before_install:
-        - choco install miniconda2 openssl.light
-        - conda create -n test-environment python=$PYTHON --yes
-        - . activate test-environment
-        - conda --version ; python --version ; pip --version
-        - python -m pip install --upgrade pip
+      <<: *windows-steps
 
     - os: windows
       language: shell  # 'language: python' is an error on Travis CI Windows
       env:
-        - PYTHON=3.5 PYTHONWARNINGS=ignore
+        - PYTHON=3.5
         - PATH="/c/tools/miniconda3/:/c/tools/miniconda3/Scripts:$PATH"
-      before_install:
-        - choco install miniconda3 openssl.light
-        - conda create -n test-environment python=$PYTHON --yes
-        - . activate test-environment
-        - conda --version ; python --version ; pip --version
-        - python -m pip install --upgrade pip
+      <<: *windows-steps
 
 script: conda --version ; python --version ; pip --version
