--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+# Discussed at https://travis-ci.community/t/python-support-on-windows/241/18
 language: python            # this works for Linux but is an error on macOS or Windows
 matrix:
   include:
