--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ matrix:
       # python: 3.7         # 'python:' is ignored on Travis CI Windows
       before_install:
         - choco install python  # this install takes at least 1 min 30 sec
-        - python -m pip install --upgrade pip
+        - sudo python -m pip install --upgrade pip
       env: PATH=/c/Python37:/c/Python37/Scripts:$PATH
 install: pip3 install --upgrade pip  # all three OSes agree about 'pip3'
 # 'python' points to Python 2.7 on macOS but points to Python 3.7 on Linux and Windows
